# optioryx_project

./: .gitignore  CMakeLists.txt  README.md
analysis/: plot_results.py  score.py
include/: data_loader.h  distance.h  evaluator.h  types.h
src/: data_loader.cpp  distance.cpp  evaluator.cpp  main.cpp
src/genetic/: ga.cpp  ga.h
src/greedy/: greedy.cpp  greedy.h
src/seed_selection/: seed_selection.cpp  seed_selection.h
src/simulated_annealing/: sa.cpp  sa.h
